alignment issue

--- a/index.css
+++ b/index.css
@@ -541,7 +541,7 @@ body {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
@@ -631,7 +631,7 @@ body {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: start;
   }
 }
